Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,15 @@
     "    if team[\"players\"][\"captain\"] = True:\n",
     "    captains.append(team[\"players\"])\n",
     "\n",
-    "captains"
+    "captains\n",
+    "\n",
+    "\n",
+    "captains = []\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    for player in team['players']:\n",
+    "        if player['captain']:\n",
+    "            captains.append(player)"
    ]
   },
   {
