Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -425,9 +425,15 @@
     "    if team[\"players\"][\"captain\"] = True:\n",
     "    captains.append(team[\"players\"])\n",
     "\n",
-    "captains\n",
-    "\n",
-    "\n",
+    "captains\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "captains = []\n",
     "# code goes here\n",
     "for team in soccer_match:\n",
